# kyrengine

./: .gitignore  CMakeLists.txt  main.cpp  maina  test
const/: shader_fs.glsl  shader_ts.glsl  shader_ts_backup.glsl  shader_vs.glsl  shader_vs_text.glsl
const/data/: circle12.txt  square.txt  triangle.txt
include/: app_config.h  main_program.h  shape.h  shape_instance.h  shape_manager.h  sprite.h  verts.h
shaders/: shader_fs.glsl  shader_fs_backup.glsl  shader_vs.glsl
src/: appconfig.cpp  appconfig.h  fps_counter.cpp  fps_counter.h  main.cpp  main_program.cpp  main_program.h  shader_reader.cpp  shader_reader.h  shape.cpp  shape.h
src/data/: appconfig.cpp  sprite.cpp
src/graphics/: shader_reader.cpp  shape.cpp
src/utils/: fps_counter.cpp  main_program.cpp  shape_manager.cpp
